rust/adapters/zcode/src/snapshots/ccusage_adapter_zcode__report__tests__focused_zcode_weekly_json.snap
---
source: adapters/zcode/src/report.rs
assertion_line: 150
expression: "report_from_rows(&weekly, AgentReportKind::Weekly)"
---
{
  "totals": {
    "cacheCreation1hTokens": 0,
    "cacheCreation5mTokens": 0,
    "cacheCreationTokens": 45,
    "cacheCreationUnbucketedTokens": 45,
    "cacheReadTokens": 75,
    "inputTokens": 230,
    "outputTokens": 35,
    "totalCost": 0.0005585,
    "totalTokens": 385
  },
  "weekly": [
    {
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 15,
      "cacheCreationUnbucketedTokens": 15,
      "cacheReadTokens": 25,
      "inputTokens": 60,
      "modelBreakdowns": [
        {
          "cacheCreation1hTokens": 0,
          "cacheCreation5mTokens": 0,
          "cacheCreationTokens": 15,
          "cacheCreationUnbucketedTokens": 15,
          "cacheReadTokens": 25,
          "cost": 0.00015549999999999999,
          "inputTokens": 60,
          "modelName": "GLM-5.2",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "GLM-5.2"
      ],
      "outputTokens": 10,
      "totalCost": 0.00015549999999999999,
      "totalTokens": 110,
      "week": "2098-12-28"
    },
    {
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 30,
      "cacheCreationUnbucketedTokens": 30,
      "cacheReadTokens": 40,
      "inputTokens": 130,
      "modelBreakdowns": [
        {
          "cacheCreation1hTokens": 0,
          "cacheCreation5mTokens": 0,
          "cacheCreationTokens": 30,
          "cacheCreationUnbucketedTokens": 30,
          "cacheReadTokens": 40,
          "cost": 0.0003224,
          "inputTokens": 130,
          "modelName": "GLM-5.3",
          "outputTokens": 20
        }
      ],
      "modelsUsed": [
        "GLM-5.3"
      ],
      "outputTokens": 20,
      "totalCost": 0.0003224,
      "totalTokens": 220,
      "week": "2099-01-11"
    },
    {
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 0,
      "cacheCreationUnbucketedTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 40,
      "modelBreakdowns": [
        {
          "cacheCreation1hTokens": 0,
          "cacheCreation5mTokens": 0,
          "cacheCreationTokens": 0,
          "cacheCreationUnbucketedTokens": 0,
          "cacheReadTokens": 10,
          "cost": 0.0000806,
          "inputTokens": 40,
          "modelName": "GLM-5.3",
          "outputTokens": 5
        }
      ],
      "modelsUsed": [
        "GLM-5.3"
      ],
      "outputTokens": 5,
      "totalCost": 0.0000806,
      "totalTokens": 55,
      "week": "2099-02-01"
    }
  ]
}
